# homework_10_1

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  utils.py
data/: transaction.json
src/: data.py  main.py  processing.py
src/Home_9_1/: masks.py
src/Home_9_2/: widget.py
src/home_10_1/: processing.py
src/home_11_1/: generators.py
src/home_11_2/: decorators.py
src/home_12_1/: external_api.py  utils.py
src/home_13_1/: reading_tabular.py
src/home_13_2/: search.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reading_tabuiar.py  test_search.py  test_utils.py  test_widget.py
